Created more verbose package.json

--- a/package.json
+++ b/package.json
@@ -5,5 +5,23 @@
   "dependencies": {
     "mithril": "^2.2.2",
     "tagl-mithril": "^1.2.2"
-  }
+  },
+  "name": "quintrical",
+  "description": "",
+  "version": "1.0.0",
+  "main": "main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/abulvenz/quintrical.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/abulvenz/quintrical/issues"
+  },
+  "homepage": "https://github.com/abulvenz/quintrical#readme"
 }
