--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
+    "start": "parcel index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
